Bug 497598 - favorites list is no longer updated
Summary: favorites list is no longer updated
Status: RESOLVED FIXED
Alias: None
Product: Telly Skout
Classification: Applications
Component: General (other bugs)
Version First Reported In: 24.12.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-17 12:39 UTC by Ralf
Modified: 2024-12-20 19:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.12.1
Sentry Crash Report:


Attachments
Screenshot 1 of 2 (91.00 KB, image/png)
2024-12-17 12:39 UTC, Ralf
Details
Screenshot 2 of 2 (234.76 KB, image/png)
2024-12-17 12:41 UTC, Ralf
Details
cause and workaround (365.58 KB, image/png)
2024-12-18 13:38 UTC, Ralf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf 2024-12-17 12:39:40 UTC
Created attachment 176706 [details]
Screenshot 1 of 2

Hi,

since yesterday my TV Spielfilm favorites list is no longer updated.

• rocketmouse@archlinux ~ 
$ telly-skout --self-test
Database for fetcher 0
Create DB tables
Starting to fetch favorites
Starting to fetch program for  "KIKA" ( "https://www.tvspielfilm.de/tv-programm/sendungen/?time=day&channel=KIKA&date=2024-12-22&page=1" )
ProgramsModel is neither a default constructible QObject, nor a default- and copy-constructible Q_GADGET, nor marked as uncreatable.
You should not use it as a QML type.
Starting to fetch program for  "KIKA" ( "https://www.tvspielfilm.de/tv-programm/sendungen/?time=day&channel=KIKA&date=2024-12-22&page=2" )

Regards,
Ralf
Comment 1 Ralf 2024-12-17 12:41:23 UTC
Created attachment 176707 [details]
Screenshot 2 of 2
Comment 2 Plata 2024-12-17 16:46:37 UTC
Why do you run with "--self-test"? This is meant for automated testing if the program runs only.

"ProgramsModel is neither a default constructible QObject, nor a default- and copy-constructible Q_GADGET, nor marked as uncreatable.
You should not use it as a QML type." is a warning which is already fixed but doesn't have any effect.

There's currently a know issue that the loading indication does not work but the update itself should be fine. Could you please check the Flatpak version (https://flathub.org/apps/org.kde.telly-skout) to see if it's maybe a packaging issue?
Comment 3 Ralf 2024-12-17 17:17:53 UTC
Hi,

I run it this way:

• rocketmouse@archlinux ~ 
$ grep Telly -B1 -A3 .config/fbpanel/lcd-realignment-alt 
    item {
      name = Telly Skout
      icon = org.kde.telly-skout
      action = telly-skout --title "TV Spielfilm" --geometry 1920x1024
    }

Telly-skout was updated on 2024-12-13. Some “k” packages were updated on 2024-12-14. If I remember correctly, it ran without problems on 2024-12-15, but I could be wrong.

No, I don't install Flatpaks as a matter of principle. But I can forward the problem to the Arch bug tracker.

Regards,
Ralf
Comment 4 Ralf 2024-12-17 17:28:38 UTC
PS: I only selected the test option because I assumed that it would run some kind of test.
I have reported it as a possible packaging issue: https://gitlab.archlinux.org/archlinux/packaging/packages/telly-skout/-/issues/1
Comment 5 Plata 2024-12-17 18:21:59 UTC
> Telly-skout was updated on 2024-12-13. Some “k” packages were updated on 2024-12-14.

The change is the KDE Gear 24.12 release.

I've compiled the 24.12 release on Arch and cannot reproduce the error.
Comment 6 Ralf 2024-12-17 19:36:54 UTC
There is no doubt that telly-skout 24.12 also worked for me at the beginning. It is not the upgrade from telly-skout 24.08.3 to 24.12 that introduced the issue.


$ grep telly-skout /var/log/pacman.log 
[2024-11-16T12:10:28+0100] [PACMAN] Running 'pacman -S spectacle telly-skout'
[2024-11-16T12:10:39+0100] [ALPM] installed telly-skout (24.08.3-1)
[2024-12-13T21:59:42+0100] [ALPM] upgraded telly-skout (24.08.3-1 -> 24.12.0-1)

$ mv -i .cache/telly-skout/ .cache/telly-__out/
 
$ telly-skout 
Database for fetcher 0
Create DB tables
Starting to fetch favorites
Starting to fetch program for  "KIKA" ( "https://www.tvspielfilm.de/tv-programm/sendungen/?time=day&channel=KIKA&date=2024-12-22&page=1" )
ProgramsModel is neither a default constructible QObject, nor a default- and copy-constructible Q_GADGET, nor marked as uncreatable.
You should not use it as a QML type.
Starting to fetch program for  "KIKA" ( "https://www.tvspielfilm.de/tv-programm/sendungen/?time=day&channel=KIKA&date=2024-12-22&page=2" )


Clearing the cache doesn't solve the issue.

The only one from KDE that I use is Krita. I just want to test spectacle and telly-skout. I have a few other KDE apps installed, such as KDE Marble and KStars, but I'm not using those apps.
Krita and spectacle are still working without issues. Spectacle is also version 24.12.

Regards,
Ralf
Comment 7 Ralf 2024-12-18 13:38:13 UTC
Created attachment 176745 [details]
cause and workaround

Hi,

I have just been able to find the cause of the problem. Changing the delete and prefetch duration fixed the problem. The old settings never enabled an extended review or an extended preview, but they did not cause any problems, see screenshot "cause and workaround".

Regards,
Ralf
Comment 8 Plata 2024-12-20 10:19:35 UTC
Does the problem occur again if you change back the delete and prefetch duration?
Comment 9 Ralf 2024-12-20 11:09:26 UTC
After setting back to delete after 2 days and prefetch 5 days, everything is still fine, even after restarting Telly Scout. I'll keep these settings and we'll see what happens after 2 or 5 days when I report back.
Comment 10 Bug Janitor Service 2024-12-20 11:19:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/telly-skout/-/merge_requests/183
Comment 11 Ralf 2024-12-20 11:27:27 UTC
The description in the merge request sounds very likely to be the cause.

FWIW everything seems to be ok, except that no 5 days are prefetched and the day ends before 0 o'clock. The "iApp"  of TV Spielfilm does also not show several days in advance, but the preview does not end on the same day before 0 o'clock, but on the following day before 5 o'clock.
Comment 12 Plata 2024-12-20 11:50:49 UTC
Git commit 631dce6a396d74d8f083537a91c7919d93e16cc5 by Plata Hill.
Committed on 20/12/2024 at 11:50.
Pushed by plata into branch 'master'.

"Favorites" page: add refetch button

If something goes wrong while fetching the programs, the fetcher might believe that all programs have been fetched already even though this is not the case.

Add a button to force a "refetch" (i.e. delete all fetched programs, and program descriptions and fetch again).

FIXED-IN: 24.12.1

M  +10   -0    src/database.cpp
M  +3    -0    src/database.h
M  +8    -1    src/fetcher.cpp
M  +1    -1    src/fetcher.h
M  +9    -0    src/qml/ChannelTablePage.qml

https://invent.kde.org/utilities/telly-skout/-/commit/631dce6a396d74d8f083537a91c7919d93e16cc5
Comment 13 Plata 2024-12-20 11:57:58 UTC
> FWIW everything seems to be ok, except that no 5 days are prefetched and the day ends before 0 o'clock. The "iApp"  of TV Spielfilm does also not show several days in advance, but the preview does not end on the same day before 0 o'clock, but on the following day before 5 o'clock.

Please open a separate report for this.
Comment 14 Plata 2024-12-20 12:03:55 UTC
Git commit fe256013488fdcf2da73092dd59dca5878c6c5fd by Plata Hill.
Committed on 20/12/2024 at 12:02.
Pushed by plata into branch 'release/24.12'.

"Favorites" page: add refetch button

If something goes wrong while fetching the programs, the fetcher might believe that all programs have been fetched already even though this is not the case.

Add a button to force a "refetch" (i.e. delete all fetched programs, and program descriptions and fetch again).

FIXED-IN: 24.12.1

M  +10   -0    src/database.cpp
M  +3    -0    src/database.h
M  +8    -1    src/fetcher.cpp
M  +1    -1    src/fetcher.h
M  +9    -0    src/qml/ChannelTablePage.qml

https://invent.kde.org/utilities/telly-skout/-/commit/fe256013488fdcf2da73092dd59dca5878c6c5fd
Comment 15 Ralf 2024-12-20 19:29:15 UTC
Hi,

thank you for your efforts. Before I add another issue, I'll stick with the “Refresh” version for a while. FWIW the dirty PKGBUILD below has a freakish pkgver and telly-scout's version is also a little bit freakish. It's just a cheap modified version of the official Arch package. It's good enough for me.

• rocketmouse@archlinux /usr/src/telly-skout 
$ cat PKGBUILD 
pkgname=telly-skout
pkgver=v24.01.90.r194.g631dce6
pkgrel=1
pkgdesc='Convergent TV guide based on Kirigami'
url='https://apps.kde.org/telly-skout/'
arch=(x86_64)
license=(GPL-2.0-or-later LGPL-2.0-or-later)
depends=(gcc-libs
         glibc
         kconfig
         kcoreaddons
         kcrash
         ki18n
         kirigami-addons
         kirigami
         qqc2-desktop-style
         qt6-base
         qt6-declarative)
makedepends=(git extra-cmake-modules)
groups=(kde-applications
        kde-utilities)
source=(telly-skout::git+https://invent.kde.org/utilities/telly-skout#commit=631dce6a396d74d8f083537a91c7919d93e16cc5)
sha256sums=('SKIP')
validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
              F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
              D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>

pkgver() {
  cd "$pkgname"
  git describe --long --abbrev=7 | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
}

build() {
  cmake -B build -S $pkgname \
    -DBUILD_TESTING=OFF
  cmake --build build
}

package() {
  DESTDIR="$pkgdir" cmake --install build
}
• rocketmouse@archlinux /usr/src/telly-skout 
$ telly-skout --version
telly-skout 25.03.70

Regards,
Ralf
Comment 16 Ralf 2024-12-20 19:37:23 UTC
I'll stick with the "Refetch" version, not a "Refresh" version for a while ;).