"Favorites" page: add refetch button

If something goes wrong while fetching the programs, the fetcher might believe that all programs have been fetched already even though this is not the case.

Add a button to force a "refetch" (i.e. delete all fetched programs, and program descriptions and fetch again).


BUG: 497598

FIXED-IN: 24.12.1